[gd_scene load_steps=19 format=3 uid="uid://v21t7u88gjhg"]

[ext_resource type="PackedScene" uid="uid://mxqtfw0fyis5" path="res://src/levels/gacha/assets/3d/cave/grotto_cavern_cave.glb" id="1_2vr2n"]
[ext_resource type="Script" uid="uid://ifsxeamdvfbj" path="res://src/levels/gacha/gacha_cave.gd" id="1_h3nu3"]
[ext_resource type="PackedScene" uid="uid://de53ks26apt33" path="res://src/levels/gacha/assets/3d/portal/old_portal.glb" id="2_h3nu3"]
[ext_resource type="PackedScene" uid="uid://b24e8uxhe6kxm" path="res://src/levels/gacha/models/torch/torch.tscn" id="4_h3nu3"]

[sub_resource type="Curve" id="Curve_2vr2n"]
_data = [Vector2(0, 0.720755), 0.0, 0.0, 0, 0, Vector2(0.783251, 0.54717), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_h3nu3"]
curve = SubResource("Curve_2vr2n")

[sub_resource type="Curve" id="Curve_2jo54"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.995074, 0.516981), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_qcqyn"]
curve = SubResource("Curve_2jo54")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2vr2n"]
emission_shape = 1
emission_sphere_radius = 1.5
gravity = Vector3(0, 9.8, 0)
scale_min = 0.3
scale_curve = SubResource("CurveTexture_qcqyn")
alpha_curve = SubResource("CurveTexture_h3nu3")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2vr2n"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
billboard_keep_scale = true

[sub_resource type="QuadMesh" id="QuadMesh_2vr2n"]
material = SubResource("StandardMaterial3D_2vr2n")
size = Vector2(0.1, 0.1)
orientation = 0

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ey0fm"]

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_d4oqp"]
panorama = SubResource("CompressedTexture2D_ey0fm")

[sub_resource type="Sky" id="Sky_g8sei"]
sky_material = SubResource("PanoramaSkyMaterial_d4oqp")

[sub_resource type="Environment" id="Environment_ltswk"]
background_mode = 2
sky = SubResource("Sky_g8sei")
tonemap_mode = 2
ssao_enabled = true
ssil_enabled = true
glow_enabled = true
glow_bloom = 0.05

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_ci2oj"]

[sub_resource type="Shader" id="Shader_2vr2n"]
code = "shader_type canvas_item;

uniform vec4 color: source_color;
uniform float multiplier = 0.2;
uniform float softness = 3.0;

void fragment() {
	float value = distance(UV, vec2(0.5));
	COLOR = vec4(color.rgb, smoothstep(multiplier, softness, value));
}

//void light() {
//	// Called for every pixel for every light affecting the CanvasItem.
//	// Uncomment to replace the default light processing function with this one.
//}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h3nu3"]
shader = SubResource("Shader_2vr2n")
shader_parameter/color = Color(0, 0, 0, 1)
shader_parameter/multiplier = 0.1
shader_parameter/softness = 0.9

[node name="GachaCave" type="Node3D"]
script = ExtResource("1_h3nu3")

[node name="Cave" parent="." instance=ExtResource("1_2vr2n")]
transform = Transform3D(-1.09278e-07, 0, -1.192, 0, 2.5, 0, 2.5, 0, -5.2104e-08, 1.33196, 2.30184, -0.0308302)

[node name="Portal" parent="." instance=ExtResource("2_h3nu3")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, -1.69767, 0)

[node name="SpawnPoint" type="Marker3D" parent="Portal"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0216665, 1.41074, 0.0298571)

[node name="PortalParticles" type="GPUParticles3D" parent="Portal"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0681841, 0.733346, 0.118988)
emitting = false
lifetime = 0.7
process_material = SubResource("ParticleProcessMaterial_2vr2n")
draw_pass_1 = SubResource("QuadMesh_2vr2n")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ltswk")
camera_attributes = SubResource("CameraAttributesPractical_ci2oj")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.674302, 0.563197, 0.477625, 0, 0.64679, -0.762668, -0.738455, -0.514269, -0.436132, 2.70448, 0.0189242, -0.0391456)
shadow_enabled = true
shadow_opacity = 0.7
shadow_blur = 3.5
directional_shadow_split_1 = 0.0
directional_shadow_blend_splits = true

[node name="Torch2" parent="." instance=ExtResource("4_h3nu3")]
transform = Transform3D(0.292372, 0, 0.956305, 0, 1, 0, -0.956305, 0, 0.292372, -3.3, -0.8, -2.1)

[node name="Torch" parent="." instance=ExtResource("4_h3nu3")]
transform = Transform3D(-0.258819, 0, 0.965926, 0, 1, 0, -0.965926, 0, -0.258819, -3.8, -0.8, 2.1)

[node name="CameraRig" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.4266, 0.102923)

[node name="Camera3D" type="Camera3D" parent="CameraRig"]
transform = Transform3D(-4.37114e-08, -0.173648, 0.984808, 0, 0.984808, 0.173648, -1, 7.5904e-09, -4.30473e-08, 5.00703, 2.7601, -0.103169)
projection = 1
current = true
size = 3.0

[node name="CanvasLayer" type="CanvasLayer" parent="CameraRig/Camera3D"]

[node name="ColorRect" type="ColorRect" parent="CameraRig/Camera3D/CanvasLayer"]
material = SubResource("ShaderMaterial_h3nu3")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true
